# MemoryMappedFile

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  MemoryMappedFile.cpp  MemoryMappedFile.h
test/: CMakeLists.gtest.txt.in  CMakeLists.txt  Test_Main.cpp  Test_MemoryMappedFile.cpp  cmake_gtest.cmake
